update scripts for some experiment scenario